--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-promise": "~4.2",
     "eslint-plugin-standard": "~4.0",
     "fancy-log": "~1.3",
+    "font-awesome": "^4.7.0",
     "fs-extra": "~8.1",
     "gulp": "~4.0",
     "gulp-concat": "~2.6",
