--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -9,19 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # 6.0.1
     - name: Set up Node
-      uses: actions/setup-node@v5
+      uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # 6.1.0
       with:
         node-version : '16'
     - name: Install gulp
-      run: npm install -g gulp-cli
+      run: npm install -g gulp-cli@3.1.0 --ignore-scripts
     - name: Install dependencies
-      run: npm install
+      run: npm ci --ignore-scripts
     - name: Build UI bundle
       run: gulp bundle
     - name: Upload UI bundle
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # 5.0.0
       with:
         name: esmf-ui-bundle.zip
         path: build/
