--- a/.github/workflows/release-artifact.yaml
+++ b/.github/workflows/release-artifact.yaml
@@ -5,10 +5,13 @@ on:
       release_version:
         description: 'Version number of the release'
         required: true
-
+permissions: {}
 jobs:
   build-ui-bundle:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
     steps:
     - name: Checkout
       uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # 6.0.1
