Rollback Fix release-artifact.yaml

--- a/.github/workflows/release-artifact.yaml
+++ b/.github/workflows/release-artifact.yaml
@@ -25,7 +25,7 @@ jobs:
     - name: Install gulp
       run: npm install -g gulp-cli@3.1.0 --ignore-scripts
     - name: Install dependencies
-      run: npm ci
+      run: npm ci --ignore-scripts
     - name: Build UI bundle
       run: gulp bundle
     - name: Add NOTICE file to build artifact
