--- a/.github/workflows/release-artifact.yaml
+++ b/.github/workflows/release-artifact.yaml
@@ -21,10 +21,11 @@ jobs:
       uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # 6.1.0
       with:
         node-version : '16'
+        package-manager-cache: false
     - name: Install gulp
-      run: npm install -g gulp-cli@3.1.0 --ignore-scripts
+      run: npm install -g gulp-cli@3.1.0
     - name: Install dependencies
-      run: npm ci --ignore-scripts
+      run: npm ci
     - name: Build UI bundle
       run: gulp bundle
     - name: Add NOTICE file to build artifact
