--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -18,9 +18,9 @@ jobs:
       with:
         node-version : '16'
     - name: Install gulp
-      run: npm install -g gulp-cli@3.1.0 --ignore-scripts
+      run: npm install -g gulp-cli@3.1.0
     - name: Install dependencies
-      run: npm ci --ignore-scripts
+      run: npm ci
     - name: Build UI bundle
       run: gulp bundle
     - name: Upload UI bundle
