--- a/.github/workflows/release-artifact.yaml
+++ b/.github/workflows/release-artifact.yaml
@@ -23,9 +23,9 @@ jobs:
         node-version : '16'
         package-manager-cache: false
     - name: Install gulp
-      run: npm install -g gulp-cli@3.1.0
+      run: npm install -g gulp-cli@3.1.0 --ignore-scripts
     - name: Install dependencies
-      run: npm ci
+      run: npm ci --ignore-scripts
     - name: Ensure optipng vendor binary is present
       shell: bash
       run: |
